--- a/OpenSky.Client/Pages/FlightLogs.xaml
+++ b/OpenSky.Client/Pages/FlightLogs.xaml
@@ -19,6 +19,7 @@
                       xmlns:ui="http://schemas.modernwpf.com/2019"
                       xmlns:converters="clr-namespace:OpenSky.Client.Converters"
                       xmlns:componentModel="clr-namespace:System.ComponentModel;assembly=WindowsBase"
+                      xmlns:dgx="urn:tom-englert.de/DataGridExtensions"
                       LoadingText="{Binding LoadingText}"
                       HorizontalScrollBar="False" Loaded="FlightLogsOnLoaded"
                       mc:Ignorable="d" d:DesignHeight="450" d:DesignWidth="800">
@@ -60,7 +61,8 @@
                 SelectedItem="{Binding SelectedFlightLog, Mode=TwoWay, UpdateSourceTrigger=PropertyChanged}"
                 AutoGenerateColumns="False" CanUserAddRows="False" CanUserDeleteRows="False" IsReadOnly="True" SelectionMode="Single" SelectionUnit="FullRow"
                 HorizontalScrollBarVisibility="Auto" VerticalScrollBarVisibility="Auto" MinColumnWidth="120" HeadersVisibility="Column"
-                ColumnHeaderStyle="{StaticResource FilteredDataGridColumnHeaderStyle}" CellStyle="{StaticResource FullRowSelectDataGridCellStyle}">
+                ColumnHeaderStyle="{StaticResource FilteredDataGridColumnHeaderStyle}" CellStyle="{StaticResource FullRowSelectDataGridCellStyle}"
+                dgx:DataGridFilter.IsAutoFilterEnabled="True">
                 <DataGrid.Resources>
                     <converters:SettingsUnitConverter x:Key="SettingsUnitConverter" />
                 </DataGrid.Resources>
