--- a/OpenSky.Client/Controls/MinMaxDoubleFilterWithPopupControl.xaml
+++ b/OpenSky.Client/Controls/MinMaxDoubleFilterWithPopupControl.xaml
@@ -1,15 +1,15 @@
 ﻿<!-- 
 ====================================================================================================================
-<copyright file="FilterWithPopupControl.xaml" company="OpenSky">
+<copyright file="MinMaxDoubleFilterWithPopupControl.xaml" company="OpenSky">
   OpenSky project 2021
 </copyright>
 <summary>
-  Filter with range min/max popup control control
+  Filter with range min/max double popup control
 </summary>
 ====================================================================================================================
 -->
     
-<Control x:Name="Control" x:Class="OpenSky.Client.Controls.FilterWithPopupControl"
+<Control x:Name="Control" x:Class="OpenSky.Client.Controls.MinMaxDoubleFilterWithPopupControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -37,7 +37,7 @@
                     </ToggleButton.Style>
                     <!-- Reuse the standard icon, but change color to green -->
                 </ToggleButton>
-                <Control Style="{DynamicResource {x:Static dgx:DataGridFilter.IconStyleKey}}" Foreground="Gray" VerticalAlignment="Center" HorizontalAlignment="Center" />
+                <Control Style="{DynamicResource {x:Static dgx:DataGridFilter.IconStyleKey}}" Foreground="Gray" VerticalAlignment="Center" HorizontalAlignment="Center" IsHitTestVisible="False" />
                 <Popup x:Name="popup" IsOpen="{Binding Path=IsPopupVisible, ElementName=Control, Mode=TwoWay}"
                        AllowsTransparency="True"
                        DataContext="{Binding ElementName=Control}" StaysOpen="False">
