--- a/OpenSky.Client/Themes/GridFilter.xaml
+++ b/OpenSky.Client/Themes/GridFilter.xaml
@@ -5,7 +5,8 @@
                     xmlns:componentModel="clr-namespace:System.ComponentModel;assembly=WindowsBase"
                     xmlns:b="http://schemas.microsoft.com/xaml/behaviors"
                     xmlns:toms="urn:TomsToolbox"
-                    xmlns:controls="clr-namespace:OpenSky.Client.Controls">
+                    xmlns:controls="clr-namespace:OpenSky.Client.Controls"
+                    xmlns:converters="clr-namespace:OpenSky.Client.Converters">
     <Style x:Key="DeleteButtonStyle" TargetType="Button">
         <Setter Property="Template">
             <Setter.Value>
@@ -402,10 +403,10 @@
         </Setter>
     </Style>
 
-    <Style TargetType="{x:Type controls:FilterWithPopupControl}">
+    <Style TargetType="{x:Type controls:MinMaxDoubleFilterWithPopupControl}">
         <Setter Property="Template">
             <Setter.Value>
-                <ControlTemplate TargetType="{x:Type controls:FilterWithPopupControl}">
+                <ControlTemplate TargetType="{x:Type controls:MinMaxDoubleFilterWithPopupControl}">
                     <Border Background="{TemplateBinding Background}"
                             BorderBrush="{TemplateBinding BorderBrush}"
                             BorderThickness="{TemplateBinding BorderThickness}" />
@@ -414,7 +415,28 @@
         </Setter>
     </Style>
 
-    <ControlTemplate x:Key="FilterWithPopup">
-        <controls:FilterWithPopupControl Filter="{Binding Path=Filter, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=dgx:DataGridFilterColumnControl}}" />
+    <ControlTemplate x:Key="MinMaxDoubleFilterWithPopupControl">
+        <controls:MinMaxDoubleFilterWithPopupControl Filter="{Binding Path=Filter, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=dgx:DataGridFilterColumnControl}}" />
+    </ControlTemplate>
+
+    <ControlTemplate x:Key="MinMaxDoubleFilterWithPopupControlDistance">
+        <ControlTemplate.Resources>
+            <converters:SettingsUnitConverter x:Key="SettingsUnitConverter" />
+        </ControlTemplate.Resources>
+        <controls:MinMaxDoubleFilterWithPopupControl Filter="{Binding Path=Filter, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=dgx:DataGridFilterColumnControl}}" ValueConverter="{StaticResource SettingsUnitConverter}" ConverterParameter="distance|F0|false" />
+    </ControlTemplate>
+
+    <ControlTemplate x:Key="MinMaxDoubleFilterWithPopupControlWeight">
+        <ControlTemplate.Resources>
+            <converters:SettingsUnitConverter x:Key="SettingsUnitConverter" />
+        </ControlTemplate.Resources>
+        <controls:MinMaxDoubleFilterWithPopupControl Filter="{Binding Path=Filter, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=dgx:DataGridFilterColumnControl}}" ValueConverter="{StaticResource SettingsUnitConverter}" ConverterParameter="weight|F0|false" />
+    </ControlTemplate>
+
+    <ControlTemplate x:Key="MinMaxDoubleFilterWithPopupControlFuel">
+        <ControlTemplate.Resources>
+            <converters:SettingsUnitConverter x:Key="SettingsUnitConverter" />
+        </ControlTemplate.Resources>
+        <controls:MinMaxDoubleFilterWithPopupControl Filter="{Binding Path=Filter, RelativeSource={RelativeSource Mode=FindAncestor, AncestorType=dgx:DataGridFilterColumnControl}}" ValueConverter="{StaticResource SettingsUnitConverter}" ConverterParameter="fuel|F0|false" />
     </ControlTemplate>
 </ResourceDictionary>
